fix: some problems with tests, controlles and services